fix: fix incorrect text alignment

--- a/src/styles/_base.css
+++ b/src/styles/_base.css
@@ -46,6 +46,7 @@ footer {
   align-items: center;
   gap: 0.5em;
   width: 100%;
+  text-align: center;
 
   @media screen and (min-width: 992px) {
     flex-direction: row;
